style/style-critical.css
/* ... */
	a:hover {
		border-color: hsl(var(--interactive));
		color: hsl(var(--interactive));
		cursor: pointer;
	}
	a:hover img {
		opacity: 0.75;
	}
	.a--inherit {
		background-image: linear-gradient(hsl(var(--background--bold)), hsl(var(--background--bold)));
		background-position: bottom;
		background-repeat: repeat-x;
		background-size: 1px 1px;
		border-color: inherit;
		color: inherit;
	}
	.a--inherit:hover {
		background-image: linear-gradient(hsl(var(--interactive)), hsl(var(--interactive)));
		border-color: hsl(var(--interactive));
		color: hsl(var(--interactive));
	}
	.a--alt:hover {
		border-color: hsl(var(--text));
		color: hsl(var(--text));
	}
	.a--outlined {
		background-image: none;
		border-color: currentColor;
		border-style: solid;
		border-width: 2px;
		padding-left: 3px;
		padding-right: 3px;
	}
	.a--outlined:hover {
		background-image: none;
	}
	.a--padded {
		background-image: none;
		display: inline-block;
		padding: 0.5rem;
	}
	.a--padded:hover {
		background-image: none;
	}



/**
	* ========================================================
	* HEADERS
	* ========================================================
	*/
	h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
		font-weight: bold;
		line-height: normal;
		margin: 0;
		padding: 0;
	}
	h1, .h1 {
		color: hsl(var(--attention--secondary));
		font-size: 1.75rem;
		margin-bottom: 3rem;
	}
	h2, .h2 {
		color: hsl(var(--text));
		font-size: 1.25rem;
		padding: 1rem;
		padding-top: 0;
	}
	h2::before, .h2::before {
		background: hsl(var(--attention--secondary));
		background-clip: content-box;
		bottom: 1rem;
		content: "";
		display: inline-block;
		left: 0;
		position: absolute;
		top: 0;
		width: 3px;
	}
	h3, .h3 {
		font-size: 1rem;
		font-weight: normal;
		padding: 1rem;
		padding-top: 0;
	}
	.text h2, .text .h2, .text h3, .text .h3 {
		padding-left: 0;
		padding-right: 0;
	}
	.text h3::before, .text .h3::before, .text h2::before, .text .h2::before {
		display: none;
	}
	h3::before, .h3::before {
		background: hsl(var(--background));
		background-clip: content-box;
		bottom: 1rem;
		content: "";
		display: inline-block;
		left: 0;
		position: absolute;
		top: 0;
		width: 1px;
	}
	.h3--compact {
		padding: 0.5rem;
		padding-top: 0;
	}
	.h3--compact::before {
		bottom: 0.5rem;
	}
	h4, .h4 {
		color: hsl(var(--attention--secondary));
		font-family: var(--font--secondary);
		font-size: 1rem;
		text-transform: uppercase;
		font-weight: normal;
	}
	.h5, h5, .input__label {
		color: hsl(var(--text--secondary));
		font-family: var(--font--secondary);
		font-size: 0.8rem;
		letter-spacing: 1px;
		text-transform: uppercase;
	}



/**
	* ========================================================
	* LANGUAGE SELECTOR
	* ========================================================
	*/
	[for="language-en"], [for="language-ja"] {
		margin: 0 !important;
	}
	[for="language-en"]::before, [for="language-ja"]::before {
		margin-right: 0.5ch !important;
	}
	#language-en:checked ~ .underhead__wrapper [for="language-en"],
	#language-ja:checked ~ .underhead__wrapper [for="language-ja"] {
		color: hsl(var(--text));
	}
	#language-en:checked ~ .underhead__wrapper [for="language-en"]::before,
	#language-ja:checked ~ .underhead__wrapper [for="language-ja"]::before {
		-moz-clip-path:    url(#symbol__checked);
		-webkit-clip-path: url(#symbol__checked);
		clip-path: url(#symbol__checked);
	}

	#language-ja:checked ~ * .any--en {
		display: none;
	}
	#language-ja:checked ~ * .any--ja {
		color: inherit;
		display: initial !important;
		font-size: inherit;
	}



/**
	* ========================================================
	* LAYOUT - HEAD
	* ========================================================
	*/
	body {
		background-color: hsl(var(--background--secondary));
	}


	/* WHOLE HEAD: LINKS */
	.head__link {
		display: inline-block;
		font-family: var(--font--secondary);
		text-align: center;
		text-transform: uppercase;
	}
	.head__link {
		margin-left: 1ch;
	}
	.head__link .any--ja {
		font-size: 0.8em;
	}
	.head__link .any--weaken {
		font-size: 0.6em;
	}
	#language-ja:checked ~ .secondary-nav__wrapper .any--ja {
		font-size: 0.9em;
	}
	#language-ja:checked ~ .primary-nav__wrapper .any--ja {
		font-size: 0.8em;
		font-weight: bold;
	}


	/* 2° (TOP NAV): WRAPPER */
	.secondary-nav__wrapper {
		align-items: flex-start;
		background: hsl(var(--background--bold));
		height: 2rem;
		line-height: 2rem;
	}
	.secondary-nav__wrapper * {
		white-space: nowrap;
	}


	/* 2° (TOP NAV): HOME BUTTON */
	.secondary-nav__home {
		background-color: hsl(var(--accent));
		background-image:
			url('/style/vkgy_cage_hd.gif'),
			url('/style/vkgy_text_hd.gif');
		background-position:
			0 1px,
			0 bottom;
		background-repeat:
			no-repeat;
		background-size:
			calc( 184px / 2 ) calc( 128px / 2 ),
			calc( 368px / 2 ) calc( 30px / 2 );
		color: hsl(var(--accent));
		display: inline-block;
		height: 5rem;
		padding: 0.25rem;
		width: 46px;
		z-index: 101;
	}
	#language-ja:checked ~ .secondary-nav__wrapper .secondary-nav__home {
		background-position:
			0 1px,
			-92px bottom;
	}
	.secondary-nav__home:hover {
		background-color: white;
		background-position:
			-46px 1px,
			-46px bottom;
		color: white;
	}
	#language-ja:checked ~ .secondary-nav__wrapper .secondary-nav__home:hover {
		background-position:
			-46px 1px,
			-138px bottom;
	}
	.secondary-nav__home::after {
		border: 0 solid transparent;
		border-top-color: currentColor;
		border-width: 0.5rem 23px 0 23px;
		content: "";
		display: block;
		height: 0.5rem;
		left: 0;
		position: absolute;
		right: 0;
		top: 100%;
	}


	/* 2° (TOP NAV): LANGUAGE */
	.secondary-nav__en, .secondary-nav__ja {
		color: hsl(var(--accent)) !important;
		font-weight: bold;
	}
	.secondary-nav__en::before, .secondary-nav__ja::before {
		display: none;
	}
	@media(min-width: 800px) {
		.secondary-nav__en::before, .secondary-nav__ja::before {
			display: inline-block;
		}
	}
/* ... */

